--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,4 @@
-fastapi==0.109.0
-uvicorn==0.27.0
-python-multipart==0.0.6
-aiosqlite==0.19.0
-python-dotenv==1.0.0
-pydantic>=2.0.0
-pydantic-settings>=2.0.0
-pytest==7.4.3
-pytest-asyncio==0.21.1
-httpx==0.25.2
+fastapi
+uvicorn[standard]
+pydantic
+python-multipart
