--- a/backend/.env.example
+++ b/backend/.env.example
@@ -20,5 +20,8 @@ RATE_LIMIT_WINDOW=60
 RESEND_API_KEY=your_resend_api_key_here
 FEEDBACK_EMAIL=ruiadevansh@gmail.com
 
+# AI Configuration
+GEMINI_API_KEY=your_gemini_api_key_here
+
 # Optional: Log to file (uncomment to enable)
 # LOG_FILE=/var/log/medfin.log
